# CppND-Capstone-Covid-19-SocialDistance

./: CMakeLists.txt  LICENSE  README.md
include/: Detector.h  Render.h  VideoCapture.h
src/: Detector.cpp  Render.cpp  VideoCapture.cpp  main.cpp
